# eispac

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  LICENSE.txt  MANIFEST.in  MPFIT-LICENSE.txt  QUICK_GUIDE-cli.md  QUICK_GUIDE.md  README.md  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml  tests.yml
conda.recipe/: meta.yaml
docs/: conf.py  guidelines.rst  index.rst  install.rst
docs/_build/doctrees/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  (+3 more)
docs/code_reference/: eispac_core.rst  eispac_data.rst  eispac_db.rst  eispac_download.rst  eispac_extern.rst  eispac_instr.rst  eispac_net.rst  eispac_templates.rst  eispac_util.rst  index.rst
docs/examples/: advanced_example.rst  basic_example.rst  download_example.rst  index.rst  plot_example.rst  read_example.rst  slice_example.rst
docs/guide/: 00-intro.rst  00-quick.rst  01-data.rst  01-intro.rst  02-scripts.rst  03-download.rst  03-read.rst  04-fitting.rst  05-prep.rst  06-acknowledge.rst  07-mpfit_docs.rst  08-appendix.rst  index.rst
docs/joss/: eispac_paper.bib  eispac_paper.md
eispac/: __init__.py  _version.py  conftest.py  version.py
eispac/core/: __init__.py  coalign_observations.py  eiscube.py  eisfitresult.py  eisfittemplate.py  eismap.py  export_fits.py  fetch_context_image.py  fit_spectra.py  fit_spectra_astropy.py  fitting_functions.py  generate_astropy_model.py  match_templates.py  mpfit.py  read_cube.py  read_fit.py  read_template.py  read_wininfo.py  rebin_cube.py  save_fit.py  scale_guess.py
eispac/data/: __init__.py
eispac/db/: __init__.py  download_db.py  download_hdf5_data.py  eisasrun.py  find_eis_cat.py  get_remote_db_modtime.py
eispac/download/: __init__.py  convert.py  download_db.py  download_hdf5_data.py  eis_obs_struct.py  run_eis_catalog.py  search.py
eispac/examples/: eis_fit_cube_example.py
eispac/instr/: __init__.py  calc_read_noise.py  calc_velocity.py  ccd_offset.py
eispac/net/: __init__.py  attrs.py  client.py
eispac/templates/: __init__.py  eis_find_templates.py  eis_read_wininfo.py  eistemplatelocator.py  read_wininfo.py  run_eis_browse_templates.py  search.py
eispac/tests/: test_coalign_observations.py  test_eiscube.py  test_eisfitresult.py  test_eisfittemplate.py  test_eismap.py  test_fit_spectra.py  test_fitting_functions.py  test_read_cube.py  test_read_fit.py  test_read_template.py  test_save_fit.py
eispac/util/: __init__.py  calc_intensity_range.py  ccd_offset.py  convert.py  rot_xy.py  scale_intensity.py
examples/: eis_fit_cube_example.py  eispac_tutorial.ipynb  example-01-plotting.ipynb
notebooks/: example-01-plotting.ipynb
scripts/: __init__.py  eis_browse_templates.py  eis_catalog.py  eis_download_files.py  eis_explore_raster.py  eis_fit_files.py  eis_plot_fit.py
users_guide/: 01-intro.tex  02-read.tex  03-fitting.tex  04-prep.tex  05-ack.tex  06-append_a.tex  07-append_b.tex  Makefile  apj.bst  eag.bib  eag.tex  eag_names.sty  tufte-book-local.tex
(+225 files in other folders)
