[metadata]
name = eispac
description = Python analysis tools for Hinode / EIS data
author = NRL EISPAC Development Team
url = https://github.com/USNavalResearchLaboratory/eispac
license = MIT
license_file = LICENSE.txt
keywords = solar, sun, physics, spectroscopy, Hinode, EIS
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    setuptools
install_requires =
    numpy>=1.18
    scipy>=1.4
    matplotlib>=3.1
    h5py>=2.9
    astropy>=3.1
    sunpy[net,map]>=3.1
    ndcube>=2.0.0
    parfive>=1.5
    python-dateutil>=2.8

[options.extras_require]
test =
    pytest>=4.6.3
    pytest-astropy
docs =
    sphinx==4.0.2  # why is this pinned so strictly?
    sphinx-automodapi>=0.13
    sphinx-rtd-theme

[options.package_data]
eispac.data.test = *.h5
eispac.data.templates = *.template.*

[tool:pytest]
testpaths = "eispac"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".jupyter" ".history" "tools"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
remote_data_strict = True
